<resources>
    <string name="app_name">Căn Tin Online</string>
    <string name="title">Điều khoản sử dụng</string>
    <string name="clause">-Không gian lận trục lợi cá nhân \n-Thực hiên đúng, đủ các yêu cầu của trường về công tác vệ sinh an toàn thực phẩm và sử dụng thực phẩm trong khuôn viên trường\n-Sử dụng tài nguyên hợp lý, tránh lãng phí</string>
    <string name="login">Đăng nhập</string>
    <string name="text_clause">Đồng ý với các điều khoản của ứng dụng</string>
    <string name="phonenumber">Số điện thoại</string>
    <string name="password">Mật khẩu</string>
    <string name="exchange_sign_up">Nếu chưa có tài khoản? <font color="#FF0000"><u>Đăng ký tại đây!</u></font></string>
    <string name="exchange_change_pass">Đổi mật khẩu</string>
    <string name="sign_up">Đăng ký tài khoản</string>
    <string name="exchange_log_in">Quay lại trang đăng nhập!</string>
    <string name="new_pass">Mật khẩu mới</string>
    <string name="re_new_pass">Xác nhận mật khẩu mới</string>
    <string name="forgot"><font color="#FF0000">Quên mật khẩu</font></string>
    <string name="confirm">Xác nhận</string>
    <string name="OTP">Mã OTP</string>
    <string name="student_number">Mã Sinh viên</string>
    <string name="otp"><u>Lấy mã OTP</u></string>
    <string name="back_to_log_in">Đã có tài khoản? <font color="#FF0000"><u>Đăng nhập ngay</u></font></string>
    <string name="forgotpass">Quên mật khẩu</string>
    <string name="go_on">Tiếp tục</string>
    <string name="resendOTP"><font color="#FF0000">Gửi lại OTP</font></string>
    <string name="confirm_pass">Xác nhận lại mật khẩu</string>
    <string name="renewpass">Nhập mật khẩu mới!</string>
    <string name="wait">Vui lòng chờ...</string>
    <string name="voucher">Ưu đãi dành cho bạn!</string>
    <string name="see">Xem</string>
    <string name="use_now"><font color="#FF0000">Dùng ngay</font></string>
    <string name="notification">Thông báo</string>
    <string name="transaction_history">Lịch sử GD</string>
    <string name="home">Trang chủ</string>
    <string name="account">Tôi</string>
    <string name="noverify">Chưa xác thực! Hãy xác thực thông tin tài khoản để được hỗ trợ các vấn đề về tài khoản và sử dụng các dịch vụ khác trong ứng dụng.</string>
    <string name="verified">Đã xác thực Bạn sẽ được chúng tôi hỗ trợ các vấn đề về tài khoản và được phép sử dụng các dịch vụ khác trong ứng dụng.</string>
    <string name="user_info">Thông tin người dùng</string>
    <string name="phone_number">Số điện thoại :</string>
    <string name="full_name">Họ và tên :</string>
    <string name="full_name1">Họ và tên</string>
    <string name="birthday">Ngày sinh :</string>
    <string name="address">Địa chỉ :</string>
    <string name="hometown">Quê quán :</string>
    <string name="student_id_image">Ảnh thẻ sinh viên :</string>
    <string name="tooltiptext_ai">Thông tin của bạn ở dưới</string>
    <string name="approve_the_request">Duyệt đơn yêu cầu</string>
    <string name="tooltiptext_aar">Kéo xuống để load lại trang sau khi duyệt đơn</string>
    <string name="tooltiptext_bp">Điền đầy đủ thông tin để đặt hàng</string>
    <string name="confirm_orders">Xác nhận đơn hàng</string>
    <string name="infor_receiver">Thông tin người nhận</string>
    <string name="id_orderer">ID nguời đặt:</string>
    <string name="id_orderer_hint">Mã sinh viên/cán bộ</string>
    <string name="receiver_name">Tên người nhận:</string>
    <string name="receiver_name_hint">Tên người nhận</string>
    <string name="phonenumber1">Số điện thoại:</string>
    <string name="time_receiver">Thời gian nhận(trong ngày):</string>
    <string name="time_receiver_hint">Ấn chọn thời gian nhận</string>
    <string name="infor_orders">Thông tin đơn hàng</string>
    <string name="total_price">Giá tổng :</string>
    <string name="note">Ghi chú :</string>
    <string name="note_hint">ghi chú (tối đa 50 kí tự)</string>
    <string name="account_money">Tiền tài khoản</string>
    <string name="cash">Tiền mặt</string>
    <string name="order">Đặt đơn</string>
    <string name="cart">Giỏ hàng</string>
    <string name="delete_cart_all">Xóa tất cả</string>
    <string name="number_of_type_in_cart">Số loại vật phẩm trong giỏ:</string>
    <string name="all">Tất cả</string>
    <string name="value_cart">Tổng giá trị trong giỏ:</string>
    <string name="tooltiptext_c">Ấn vào từng đơn hàng để duyệt hoặc hủy</string>
    <string name="browse_orders">Duyệt đơn đặt hàng</string>
    <string name="list_item">Danh sách vật phẩm</string>
    <string name="tooltiptext_f">Ấn vào vật phẩm để sửa hoặc xóa</string>
    <string name="tooltiptext_fi">Điền đầy đủ vào chỗ trống hoặc sửa chỗ cũ để sửa đổi thông tin vật phẩm</string>
    <string name="info_item">Thông tin vật phẩm</string>
    <string name="image_item">Ảnh đồ cần bán:</string>
    <string name="type_item">Loại vật phẩm :</string>
    <string name="type_item_hint">Ấn vào đây để chọn loại vật phẩm</string>
    <string name="id_item">ID vật phẩm :</string>
    <string name="name_item">Tên vật phẩm :</string>
    <string name="name_item_hint">Tên vật phẩm (max 45 kí tự)</string>
    <string name="introduce_item">Giới thiệu :</string>
    <string name="introduce_item_hint">Giới thiệu vật phẩm (max 200 kí tự)</string>
    <string name="price_item">Giá mỗi vật phẩm :</string>
    <string name="price_item_hint">Giá mỗi vật phẩm (đồng)</string>
    <string name="change">Sửa đổi</string>
    <string name="sell_item">Đăng bán vật phẩm</string>
    <string name="tooltiptext_h">Điền đầy đủ thông tin rồi báo lỗi!</string>
    <string name="center_help">Trung tâm trợ giúp</string>
    <string name="write_error">Điền đầy đủ thông tin để báo lỗi</string>
    <string name="error_hint">Lỗi gặp phải (tối đa 50 kí tự)</string>
    <string name="error_descrip_hint">Mô tả lỗi (tối đa 100 kí tự)</string>
    <string name="error_time_hint">Thời gian lỗi xảy ra</string>
    <string name="error_image">Ảnh lỗi (tối đa 2 ảnh):</string>
    <string name="send">Gửi</string>
    <string name="orders_history">Lịch sử mua hàng</string>
    <string name="tooltiptext_ho">Kéo xuống để load lại trang sau khi duyệt đơn</string>
    <string name="tooltiptext_ir">Thông tin đơn nạp tiền tài khoản</string>
    <string name="infor_recharge">Thông tin đơn nạp</string>
    <string name="orders">Đơn hàng:</string>
    <string name="orders_id">Mã đơn:</string>
    <string name="money_recharge">Số tiền nạp (VND):</string>
    <string name="status">Trạng thái:</string>
    <string name="time_recharge">Thời gian tạo:</string>
    <string name="infor_bill_recharge">Thông tin thanh toán:</string>
    <string name="bank">Ngân hàng:</string>
    <string name="account_number">Số tài khoản:</string>
    <string name="account_owner">Chủ tài khoản:</string>
    <string name="content_bill">Nội dung thanh toán:</string>
    <string name="qr_code">Mã QR:</string>
    <string name="tooltiptext_io">Thông tin đơn hàng của bạn</string>
    <string name="payment_method">Phương thức thanh toán :</string>
    <string name="note1">Lưu ý:</string>
    <string name="note_infor">Vui lòng chụp màn hình thông tin đơn hàng để đưa cho nhân viên khi nhận hàng</string>
    <string name="tooltiptext_ls">Thông tin tài khoản của bạn</string>
    <string name="check_account">Kiểm tra tài khoản</string>
    <string name="authen_info">Xác thực thông tin</string>
    <string name="finance_management">Quản lý tài chính</string>
    <string name="account1">Tài khoản:</string>
    <string name="student_number1">Mã sinh viên:</string>
    <string name="acc_balance">Số dư tài khoản:</string>
    <string name="recharge">Nạp tiền</string>
    <string name="withdraw">Rút tiền</string>
    <string name="recharge_request">Tạo yêu cầu nạp tiền:</string>
    <string name="recharge_money1">Tạo yêu cầu nạp tiền</string>
    <string name="withdraw_money">Tạo yêu cầu rút tiền:</string>
    <string name="money_withdraw">Số tiền rút (VND):</string>
    <string name="receiver_bank">Số tài khoản nhận:</string>
    <string name="receiver_name_bank">Tên chủ tài khoản nhận:</string>
    <string name="money_withdraw1">Tạo yêu cầu rút tiền</string>
    <string name="register_info">Đăng ký thông tin</string>
    <string name="tooltiptext_ri">Nhập đầy đủ dữ liệu vào các trường ngày sinh, địa chỉ, quê quán</string>
    <string name="avatar">Ảnh đại diện :</string>
    <string name="tooltiptext_sn">Điền vào chỗ trống bên dưới rồi gửi thông báo</string>
    <string name="send_noti">Gửi thông báo</string>
    <string name="noti1">1. Các thành phần của thông báo</string>
    <string name="pick_noti_type">Chọn thể loại thông báo</string>
    <string name="noti_title">Tiêu đề</string>
    <string name="noti_content">Nội dung thông báo</string>
    <string name="noti2">2. Chọn phạm vi gửi thông báo</string>
    <string name="pick_person_receiver">Chọn người nhận</string>
    <string name="tooltiptext_va">Kiểm tra thông tin người dùng ở dưới</string>
    <string name="verify_now">Xác thực ngay</string>
    <string name="requestor_id">ID nguời yêu cầu:</string>
    <string name="money">Số tiền:</string>
    <string name="enter_otp_code">Nhập mã OTP</string>
    <string name="setting">Cài đặt</string>
    <string name="acc_history">Lịch sử tài khoản</string>
    <string name="order_history">Lịch sử mua hàng</string>
    <string name="send_error">Báo lỗi</string>
    <string name="logout">Đăng xuất</string>
    <string name="old_pass">Mật khẩu cũ</string>
    <string name="directory">Danh mục</string>
    <string name="rice">Cơm/Cơm tấm</string>
    <string name="pho_noodle">Bún, Phở\nMì</string>
    <string name="fruit">Trái cây</string>
    <string name="drinks">Đồ uống</string>
    <string name="dessert">Món tráng\nmiệng</string>
    <string name="snack">Đồ ăn vặt</string>
    <string name="other_item">Vật phẩm khác</string>
    <string name="for_saler">Dành cho người bán</string>
    <string name="register_sell">Đăng bán</string>
    <string name="approve_purchase_order">Duyệt đơn mua</string>
    <string name="dish_list">Danh sách món</string>
    <string name="orders_content">Nội dung đơn :</string>
    <string name="select_language">Chọn ngôn ngữ</string>
    <string name="important">Quan trọng</string>
    <string name="incentives">Ưu đãi</string>
    <string name="interact">Tương tác</string>
    <string name="select_time">Ấn vào đây để chọn thời gian</string>
</resources>