<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_color3"
    tools:context=".main.home.order.BuySingleProduct">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|end"
            android:layout_marginStart="10dp"
            android:src="@drawable/help"
            android:tooltipText="@string/tooltiptext_bp"
            tools:targetApi="o" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/confirm_orders"
            android:textColor="@color/black"
            android:textSize="@dimen/text_title_small" />
    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="Thông tin người nhận"
                android:textSize="@dimen/text_button"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/id_orderer"
                    android:textSize="@dimen/text_describe"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvAccId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/id_orderer_hint"
                    android:textSize="@dimen/text_describe" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/receiver_name"
                    android:textSize="@dimen/text_describe"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edtName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/receiver_name_hint"
                    android:maxLength="20"
                    android:maxLines="1"
                    android:textSize="@dimen/text_describe" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phonenumber1"
                    android:textSize="@dimen/text_describe"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edtPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/phonenumber"
                    android:maxLength="10"
                    android:textSize="@dimen/text_describe" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time_receiver"
                    android:textSize="@dimen/text_describe"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/time_receiver_hint"
                    android:textSize="@dimen/text_describe" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/infor_orders"
                android:textSize="@dimen/text_button"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|start"
                android:orientation="horizontal"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp">

                <ImageView
                    android:id="@+id/itemImageOder"
                    android:layout_width="30dp"
                    android:layout_height="30dp" />

                <TextView
                    android:id="@+id/itemQuantityOder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_describe"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="x"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_describe"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/itemIdOder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_describe"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/itemNameOder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_describe" />

                <TextView
                    android:id="@+id/itemPriceOder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_describe" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="vnđ"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_describe" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_price"
                    android:textSize="@dimen/text_describe"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_describe" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="vnđ"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_describe" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/note"
                    android:textSize="@dimen/text_describe"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edtNote"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/note_hint"
                    android:maxLength="50"
                    android:textSize="@dimen/text_describe" />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="Chọn phương thức thanh toán"
                android:textSize="@dimen/text_button"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center">

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/tvPayOnline"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:background="@drawable/check_select"
                            android:text="@string/account_money"
                            android:textSize="@dimen/text_describe" />
                    </androidx.cardview.widget.CardView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center">

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/tvPayOffline"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:text="@string/cash"
                            android:textSize="@dimen/text_describe" />
                    </androidx.cardview.widget.CardView>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnOrder"
        android:text="@string/order"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        app:backgroundTint="@android:color/holo_red_light"
        android:layout_height="wrap_content"/>
</LinearLayout>